force-app/main/default/objects/Form_Element__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <externalId>true</externalId>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>component</fullName>
                </value>
                <value>
                    <fullName>wizard page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Form_Page__c</fullName>
        <label>Form Page</label>
        <referenceTo>Form_Page__c</referenceTo>
        <relationshipLabel>Form Elements</relationshipLabel>
        <relationshipName>Form_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Element</label>
        <referenceTo>Form_Element__c</referenceTo>
        <relationshipLabel>Form Elements</relationshipLabel>
        <relationshipName>Form_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Element</label>
    <listViews>
        <fullName>All_Form_Element</fullName>
        <columns>NAME</columns>
        <columns>Display_Type__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Label__c</columns>
        <columns>Form_Page__c</columns>
        <columns>Component_Name__c</columns>
        <columns>API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Form Element</label>
    </listViews>
    <nameField>
        <label>Form Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>